--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
             <h3 class="text-2-title">Super Easy to Edit</h3>
             <p class="describtion-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
         </div>
+        <div class="experience">
+            <h1 class="experience-title">10+Year</h1>
+            <p class="experience-describtion">Experience</p>
+        </div>
     </section>
     <section>
         <h2 class="some-facts">Some Facts</h2>
